k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-builder
  namespace: resume-builder-ns
  labels:
    app: resume-builder
spec:
  replicas: 2
  selector:
    matchLabels:
      app: resume-builder
  template:
    metadata:
      labels:
        app: resume-builder
    spec:
      containers:
        - name: resume-builder
          image: abhinavsingh0923/resume-builder:latest # Jenkins will update this tag
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /_stcore/health
              port: 8501
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /_stcore/health
              port: 8501
            initialDelaySeconds: 10
            periodSeconds: 5
